--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "serverless-bundle",
+  "name": "@trades-org/serverless-bundle",
   "version": "5.0.3",
   "description": "An extension of the serverless-webpack plugin that bundles your ES6 + TypeScript Node.js Lambda functions.",
   "main": "index.js",
@@ -26,9 +26,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/AnomalyInnovations/serverless-bundle.git"
+    "url": "https://github.com/trades-org/serverless-bundle.git"
   },
-  "author": "Jay V <air@live.ca>",
   "license": "MIT",
   "dependencies": {
     "@babel/core": "^7.13.10",
