--- a/package.json
+++ b/package.json
@@ -1,104 +1,91 @@
-{  
-  "name": "@trades-org/serverless-bundle",
-  "version": "5.5.0",
-  "description": "An extension of the serverless-webpack plugin that bundles your ES6 + TypeScript Node.js Lambda functions.",
-  "main": "index.js",
-  "scripts": {
-    "changelog": "lerna-changelog",
-    "jest-clear-cache": "jest --clearCache",
-    "test": "jest --no-watchman",
-    "prepare": "is-ci || husky install"
-  },
-  "bin": {
-    "serverless-bundle": "bin/scripts.js"
-  },
-  "jest": {
-    "setupFilesAfterEnv": [
-      "<rootDir>/tests/helpers/setup-tests.js"
-    ],
-    "testPathIgnorePatterns": [
-      "<rootDir>/scripts",
-      "<rootDir>/tests/scripts/tests",
-      "<rootDir>/tests/aliases-jest/tests",
-      "<rootDir>/tests/typescript-jest/tests",
-      "<rootDir>/tests/typescript-exclude-files/handler.spec.ts"
-    ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/trades-org/serverless-bundle.git"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "@babel/core": "^7.17.2",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
-    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
-    "@babel/plugin-transform-runtime": "^7.17.0",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/runtime": "^7.17.2",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "babel-eslint": "^10.0.2",
-    "babel-jest": "^26.6.3",
-    "babel-loader": "^8.2.3",
-    "babel-plugin-source-map-support": "^2.1.3",
-    "chalk": "^4.1.2",
-    "copy-webpack-plugin": "^8.1.1",
-    "core-js": "^3.21.0",
-    "cross-spawn": "^7.0.3",
-    "css-loader": "^5.2.7",
-    "dotenv": "^8.6.0",
-    "esbuild-loader": "^2.18.0",
-    "eslint": "^7.32.0",
-    "eslint-config-strongloop": "^2.1.0",
-    "eslint-webpack-plugin": "^2.6.0",
-    "fast-glob": "^3.2.11",
-    "fork-ts-checker-webpack-plugin": "^6.5.0",
-    "graphql": "^15.8.0",
-    "graphql-tag": "^2.12.6",
-    "ignore-loader": "^0.1.2",
-    "import-fresh": "^3.3.0",
-    "isomorphic-style-loader": "^5.3.2",
-    "jest": "^26.6.3",
-    "pkg-up": "^3.1.0",
-    "raw-loader": "^4.0.2",
-    "regenerator-runtime": "^0.13.9",
-    "resolve": "^1.22.0",
-    "sass": "^1.49.7",
-    "sass-loader": "^11.1.1",
-    "serverless-webpack": "^5.6.1",
-    "source-map-support": "^0.5.21",
-    "ts-jest": "^26.5.6",
-    "ts-loader": "^8.3.0",
-    "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "typescript": "^4.5.5",
-    "webpack": "^5.68.0",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-node-externals": "^2.5.2",
-    "webpack-permissions-plugin": "^1.0.8"
-  },
-  "devDependencies": {
-    "@types/jest": "^26.0.24",
-    "husky": "^6.0.0",
-    "is-ci": "^3.0.1",
-    "lerna-changelog": "^1.0.1",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.5.1",
-    "reflect-metadata": "^0.1.13",
-    "serverless": "^2.72.2"
-  },
-  "peerDependencies": {
-    "serverless": "1 || 2 || 3"
-  },
-  "lint-staged": {
-    "*.{js,css,json,md}": [
-      "prettier --write",
-      "git add"
-    ],
-    "*.js": [
-      "eslint --fix",
-      "git add"
-    ]
-  }
+{
+	"name": "@trades-org/serverless-bundle",
+	"version": "5.5.0",
+	"description": "An extension of the serverless-webpack plugin that bundles your ES6 + TypeScript Node.js Lambda functions.",
+	"main": "index.js",
+	"scripts": {
+		"changelog": "lerna-changelog",
+		"jest-clear-cache": "jest --clearCache",
+		"test": "jest --no-watchman"
+	},
+	"bin": {
+		"serverless-bundle": "bin/scripts.js"
+	},
+	"jest": {
+		"setupFilesAfterEnv": ["<rootDir>/tests/helpers/setup-tests.js"],
+		"testPathIgnorePatterns": [
+			"<rootDir>/scripts",
+			"<rootDir>/tests/scripts/tests",
+			"<rootDir>/tests/aliases-jest/tests",
+			"<rootDir>/tests/typescript-jest/tests",
+			"<rootDir>/tests/typescript-exclude-files/handler.spec.ts"
+		]
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/trades-org/serverless-bundle.git"
+	},
+	"license": "MIT",
+	"dependencies": {
+		"@babel/core": "^7.17.2",
+		"@babel/plugin-proposal-class-properties": "^7.16.7",
+		"@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
+		"@babel/plugin-proposal-optional-chaining": "^7.16.7",
+		"@babel/plugin-transform-runtime": "^7.17.0",
+		"@babel/preset-env": "^7.16.11",
+		"@babel/runtime": "^7.17.2",
+		"@typescript-eslint/eslint-plugin": "^4.33.0",
+		"@typescript-eslint/parser": "^4.33.0",
+		"babel-eslint": "^10.0.2",
+		"babel-jest": "^26.6.3",
+		"babel-loader": "^8.2.3",
+		"babel-plugin-source-map-support": "^2.1.3",
+		"chalk": "^4.1.2",
+		"copy-webpack-plugin": "^8.1.1",
+		"core-js": "^3.21.0",
+		"cross-spawn": "^7.0.3",
+		"css-loader": "^5.2.7",
+		"dotenv": "^8.6.0",
+		"esbuild-loader": "^2.18.0",
+		"eslint": "^7.32.0",
+		"eslint-config-strongloop": "^2.1.0",
+		"eslint-webpack-plugin": "^2.6.0",
+		"fast-glob": "^3.2.11",
+		"fork-ts-checker-webpack-plugin": "^6.5.0",
+		"graphql": "^15.8.0",
+		"graphql-tag": "^2.12.6",
+		"ignore-loader": "^0.1.2",
+		"import-fresh": "^3.3.0",
+		"isomorphic-style-loader": "^5.3.2",
+		"jest": "^26.6.3",
+		"pkg-up": "^3.1.0",
+		"raw-loader": "^4.0.2",
+		"regenerator-runtime": "^0.13.9",
+		"resolve": "^1.22.0",
+		"sass": "^1.49.7",
+		"sass-loader": "^11.1.1",
+		"serverless-webpack": "^5.6.1",
+		"source-map-support": "^0.5.21",
+		"ts-jest": "^26.5.6",
+		"ts-loader": "^8.3.0",
+		"tsconfig-paths-webpack-plugin": "^3.5.2",
+		"typescript": "^4.5.5",
+		"webpack": "^5.68.0",
+		"webpack-bundle-analyzer": "^4.5.0",
+		"webpack-node-externals": "^2.5.2",
+		"webpack-permissions-plugin": "^1.0.8"
+	},
+	"devDependencies": {
+		"@types/jest": "^26.0.24",
+		"husky": "^6.0.0",
+		"is-ci": "^3.0.1",
+		"lerna-changelog": "^1.0.1",
+		"lint-staged": "^10.5.4",
+		"prettier": "^2.5.1",
+		"reflect-metadata": "^0.1.13",
+		"serverless": "^2.72.2"
+	},
+	"peerDependencies": {
+		"serverless": "1 || 2 || 3"
+	}
 }
